--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.3.6",
     "vue-chartjs": "^3.4.2",
+    "vue-router": "^3.0.6",
     "vue-socket.io": "^3.0.7",
     "vue-uuid": "^1.1.1",
     "vuetify": "^1.5.5"
